# scanfs

./: LICENSE  README.md  pyproject.toml
scanfs/: cli.py  file.py  volumes.py
tests/: test_rootfs_stats.py
