[tool.poetry]
name = "scanfs"
version = "0.1.0"
description = "Embedded Linux Root Filesystem Analysis Tool"
authors = ["Colin McAllister <colinmca242@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
